Se sube segunda parte del proyecto

--- a/apx-cpnt-pruebaTecnica/artifact/dtos/WIKJC268/pom.xml
+++ b/apx-cpnt-pruebaTecnica/artifact/dtos/WIKJC268/pom.xml
@@ -44,9 +44,9 @@
 					<execution>
 						<phase>install</phase>
 						<configuration>
-							<tasks>
+							<target>
 								<copy todir="${outputDirectoryDTOs}" file="./target/${project.artifactId}.jar" />
-							</tasks>
+							</target>
 						</configuration>
 						<goals>
 							<goal>run</goal>
