--- a/apx-cpnt-pruebaTecnica/artifact/libraries/WIKJR268IMPL/pom.xml
+++ b/apx-cpnt-pruebaTecnica/artifact/libraries/WIKJR268IMPL/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.bbva.wikj</groupId>
@@ -36,6 +36,16 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.bbva.wikj.dto.id</groupId>
+			<artifactId>WIKJC268</artifactId>
+			<version>0.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.bbva.wikj</groupId>
+			<artifactId>WIKJR269</artifactId>
+			<version>0.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
@@ -70,9 +80,9 @@
 					<execution>
 						<phase>install</phase>
 						<configuration>
-							<tasks>
-								<copy todir="${outputDirectoryLibraries}" file="./target/${project.artifactId}.jar" />
-							</tasks>
+							<target>
+								<copy todir="${outputDirectoryLibraries}" file="./target/${project.artifactId}.jar"/>
+							</target>
 						</configuration>
 						<goals>
 							<goal>run</goal>
